--- a/game/Submods/MAICA_ChatSubmod/custom_modelconfig.json
+++ b/game/Submods/MAICA_ChatSubmod/custom_modelconfig.json
@@ -19,5 +19,8 @@
     "seed":null,
 
     "//":"总是尽可能使用MFocus的最终输出替代指导构型信息. 启用此功能可能提升模型的复杂信息梳理能力, 但也可能会造成人称或格式的混乱.",
-    "mf_aggressive":false
+    "mf_aggressive":false,
+
+    "//":"指定sfe_aggressive为true将总是以用户的真名替代prompt中的[player]字段. 启用此功能可能有利于模型理解玩家的姓名, 但也可能会造成总体拟合能力的下降和信息编造.",
+    "sfe_aggressive":false
 }
