feat(MAICA): 添加对话质量检测与通知功能
- 新增 dscl_pvn、pre_astp、post_astp 三个高级设置选项
- 实现会话质量下降检测通知界面 maica_dscl_pvn_notify
- 添加 dscl 触发器用于监控对话质量状态
- 在设置界面增加测试按钮用于验证通知功能
- 优化调试信息显示，移除冗余的 mas_rev_unseen 内容

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -118,6 +118,12 @@
                 "settings": {
                     "foreground": "#000"
                 }
+            },
+            {
+                "scope": "renpy.meta.color.#ff6666",
+                "settings": {
+                    "foreground": "#ff6666"
+                }
             }
         ]
     }
